<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

	<android.support.v7.widget.CardView
			android:layout_width="368dp"
			android:layout_height="150dp"
			android:layout_marginTop="4dp"
			android:padding="10dp"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintHorizontal_bias="0.0">
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent" android:id="@+id/item_RelativeLayout">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
					android:layout_alignParentStart="true" android:layout_marginStart="22dp"
					android:layout_alignParentTop="true" android:id="@+id/imageView" android:layout_marginTop="28dp"
					android:contentDescription="@string/imageDesc"/>
			<TextView
					android:text="@string/chorename"
					android:layout_width="110dp"
					android:layout_height="30dp"
					android:layout_marginStart="18dp" android:id="@+id/listChoreName"
					android:layout_toEndOf="@+id/imageView"
					android:layout_marginTop="19dp"
					android:layout_alignParentTop="true" android:textStyle="bold"/>
			<TextView
					android:layout_width="110dp"
					android:layout_height="30dp"
					android:id="@+id/assignedBy"
					android:layout_marginStart="16dp"
					android:layout_marginTop="15dp"
					android:layout_below="@+id/listChoreName" tools:text="@string/assignedby"
					android:layout_toEndOf="@+id/imageView"/>
			<TextView
					android:text="@string/timeassigned"
					android:layout_width="110dp"
					android:layout_height="30dp" android:layout_below="@+id/assignedBy"
					android:id="@+id/textView3"
					android:layout_marginTop="5dp"
					android:layout_toEndOf="@+id/imageView"
					android:layout_marginStart="148dp" android:layout_alignParentEnd="true"
					android:layout_marginEnd="16dp"/>
			<Button
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:id="@+id/btnEdit"
					android:background="@android:drawable/ic_menu_edit" android:layout_marginTop="15dp"
					android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
					android:layout_marginEnd="60dp"/>
			<Button
					android:layout_width="25dp"
					android:layout_height="25dp" android:layout_toEndOf="@+id/listChoreName"
					android:layout_alignTop="@+id/assignedBy" android:id="@+id/btnDelete"
					android:background="@android:drawable/ic_menu_delete" android:layout_marginTop="-49dp"
					android:layout_marginStart="101dp"/>
		</RelativeLayout>
	</android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>